[package]
name = "edgeware-cli"
version = "3.3.6"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
build = "build.rs"
edition = "2018"
default-run = "edgeware"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[badges]
travis-ci = { repository = "hicommonwealth/edgeware-node", branch = "erup-4" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "hicommonwealth/edgeware-node" }
is-it-maintained-open-issues = { repository = "hicommonwealth/edgeware-node" }

[[bin]]
name = "edgeware"
path = "bin/main.rs"
required-features = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3", optional = true }
tracing = "0.1.19"
parking_lot = "0.10.0"
hex = "0.3.2"
serde_json = "1.0"

# primitives
sp-authority-discovery = { version = "3.0" }
sp-blockchain = { version = "3.0" }
sp-consensus-aura = { version = "0.9" }
sp-finality-grandpa = { version = "3.0" }
sp-core = { version = "3.0" }
sp-runtime = { version = "3.0" }
sp-timestamp = { version = "3.0", default-features = false }
sp-inherents = { version = "3.0" }
sp-keyring = { version = "3.0" }
sp-io = { version = "3.0" }
sp-consensus = { version = "0.9" }
sp-transaction-pool = { version = "3.0" }

# client dependencies
sc-client-api = { version = "3.0" }
sc-chain-spec = { version = "3.0" }
sc-consensus = { version = "0.9" }
sc-transaction-pool = { version = "3.0" }
sc-network = { version = "0.9" }
sc-consensus-aura = { version = "0.9" }
sc-finality-grandpa = { version = "0.9" }
sc-client-db = { version = "0.9", default-features = false }
sc-offchain = { version = "3.0" }
sc-rpc = { version = "3.0" }
sc-basic-authorship = { version = "0.9" }
sc-service = { version = "0.9", default-features = false }
sc-tracing = { version = "3.0" }
sc-telemetry = { version = "3.0" }
sc-authority-discovery = { version = "0.9" }
sc-finality-grandpa-warp-sync = { version = "0.9.0", optional = true }


# frame dependencies
pallet-indices = { version = "3.0" }
pallet-timestamp = { version = "3.0", default-features = false }
pallet-contracts = { version = "3.0" }
frame-system = { version = "3.0" }
pallet-balances = { version = "3.0" }
pallet-transaction-payment = { version = "3.0" }
frame-support = { version = "3.0", default-features = false }
pallet-im-online = { version = "3.0", default-features = false }
pallet-authority-discovery = { version = "3.0" }
pallet-staking = { version = "3.0" }
pallet-grandpa = { version = "3.0" }
pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "erup-4" }

# node-specific dependencies
edgeware-runtime = { version = "3.3.6", path = "../runtime", default-features = false }
edgeware-rpc = { version = "3.3.6", path = "../rpc" }
edgeware-primitives = { version = "3.3.6", path = "../primitives", default-features = false }
edgeware-executor = { version = "3.3.6", path = "../executor", default-features = false }
edgeware-rpc-txpool = { path = "../../client/rpc/txpool", default-features = false }
edgeware-rpc-primitives-txpool = { path = "../txpool", default-features = false }
edgeware-rpc-debug = { path = "../../client/rpc/debug", default-features = false }
edgeware-rpc-primitives-debug = { path = "../debug", default-features = false }
edgeware-rpc-trace = { path = "../../client/rpc/trace", default-features = false }

# CLI-specific dependencies
sc-cli = { version = "0.9", optional = true }
frame-benchmarking-cli = { version = "3.0", optional = true }
edgeware-opts = { path = "../opts", version = "0.1.0", optional = true }

fc-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fp-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fc-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4", features = ["rpc_binary_search_estimate"] }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fc-rpc-core = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fc-db = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }
fc-mapping-sync = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-4" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
browser-utils = { version = "0.9", package = "substrate-browser-utils", optional = true }
libp2p-wasm-ext = { version = "0.28", features = ["websocket"], optional = true }

tokio = "0.2"

[target.'cfg(target_arch="x86_64")'.dependencies]
edgeware-executor = { path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.9", features = [ "wasmtime" ] }
sc-service = { version = "0.9", default-features = false, features = [ "wasmtime" ] }
sp-trie = { version = "3.0", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { version = "3.0" }
sc-consensus = { version = "0.9" }
sc-consensus-epochs = { version = "0.9" }

futures = "0.3.4"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3", optional = true }
frame-benchmarking-cli = { version = "3.0", optional = true }
substrate-build-script-utils = { version = "3.0", optional = true }
substrate-frame-cli = { version = "3.0", optional = true }
sc-cli = { version = "0.9", optional = true }

[features]
default = [ "cli" ]
cli = [
	"edgeware-executor/wasmi-errno",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
	"edgeware-opts"
]
frontier-block-import = []
cli-completion = []
runtime-benchmarks = [
	"edgeware-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
