[package]
name = "edgeware-cli"
version = "3.3.5"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
build = "build.rs"
edition = "2018"
default-run = "edgeware"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[badges]
travis-ci = { repository = "hicommonwealth/edgeware-node", branch = "erup-5" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "hicommonwealth/edgeware-node" }
is-it-maintained-open-issues = { repository = "hicommonwealth/edgeware-node" }

[[bin]]
name = "edgeware"
path = "bin/main.rs"
required-features = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3", optional = true }
tracing = "0.1.19"
parking_lot = "0.10.0"
hex = "0.3.2"
serde_json = "1.0"

# primitives
sp-authority-discovery = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-blockchain = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-consensus-aura = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-finality-grandpa = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-core = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-runtime = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-timestamp = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-inherents = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-keyring = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-io = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-consensus = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-transaction-pool = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }

# client dependencies
sc-client-api = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-chain-spec = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-consensus = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-transaction-pool = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-network = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-consensus-aura = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-finality-grandpa = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-client-db = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sc-offchain = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-rpc = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-basic-authorship = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-service = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sc-tracing = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-telemetry = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-authority-discovery = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }


# frame dependencies
pallet-indices = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-timestamp = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-contracts = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
frame-system = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-balances = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-transaction-payment = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
frame-support = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-im-online = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
pallet-authority-discovery = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-staking = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-grandpa = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-dynamic-fee = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
pallet-evm = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }

# node-specific dependencies
edgeware-runtime = { path = "../runtime", default-features = false }
edgeware-rpc = { path = "../rpc" }
edgeware-primitives = { path = "../primitives", default-features = false }
edgeware-executor = { path = "../executor", default-features = false }
edgeware-rpc-txpool = { path = "../../client/rpc/txpool", default-features = false }
edgeware-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool", default-features = false }
edgeware-rpc-debug = { path = "../../client/rpc/debug", default-features = false }
edgeware-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-features = false }
edgeware-rpc-trace = { path = "../../client/rpc/trace", default-features = false }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", optional = true }
frame-benchmarking-cli = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", optional = true }
edgeware-cli-opt = { path = "../cli-opt", optional = true }

fc-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fp-consensus = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fc-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", features = ["rpc_binary_search_estimate"] }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fc-rpc-core = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fc-db = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fc-mapping-sync = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
libp2p-wasm-ext = { version = "0.29", features = ["websocket"], optional = true }

tokio = "0.2"

[target.'cfg(target_arch="x86_64")'.dependencies]
edgeware-executor = { path = "../executor", features = [ "wasmtime" ] }
sc-cli = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", features = [ "wasmtime" ] }
sc-service = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false, features = [ "wasmtime" ] }
sp-trie = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-consensus = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-consensus-epochs = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }

futures = "0.3.4"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3", optional = true }
frame-benchmarking-cli = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", optional = true }
substrate-build-script-utils = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", optional = true }
substrate-frame-cli = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", optional = true }
sc-cli = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", optional = true }

[features]
default = [ "cli" ]
cli = [
	"edgeware-executor/wasmi-errno",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
	"edgeware-cli-opt"
]
frontier-block-import = []
cli-completion = []
runtime-benchmarks = [
	"edgeware-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
