[package]
name = "edgeware-cli"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
build = "build.rs"
edition = "2021"
default-run = "edgeware"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[[bin]]
name = "edgeware"
path = "bin/main.rs"
required-features = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.1.2" }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }
log = "0.4.8"
maplit = "1.0.2"
rand = "0.7.2"
#structopt = { version = "0.3.8", features=["paw"] }
#paw = "1.0"
clap = { version = "3.1.8", features = [ "derive" ], optional = true }

tracing = "0.1.19"
parking_lot = "0.12.0"
#lock_api = "0.1.5"
hex = "0.3.2"
serde_json = "1.0"

# primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
#sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

# client dependencies
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-consensus-aura = { git = "https://github.com/edgeware-network/edg-aura", default-features = false }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-consensus-slots =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }


# frame dependencies
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19", default-features = false }
evm = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false, features = [ "with-codec" ] } #
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19", default-features = false }
ethereum-types = { version = "0.13.1", default-features = false, features = ["rlp","codec", "std"] }

# node-specific dependencies
edgeware-runtime = { path = "../runtime" }
edgeware-rpc = { path = "../rpc" }
edgeware-primitives = { path = "../primitives" }
edgeware-executor = { path = "../executor" }
edgeware-rpc-txpool = { path = "../../client/rpc/txpool" }
edgeware-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
edgeware-rpc-debug = { path = "../../client/rpc/debug" }
edgeware-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
edgeware-rpc-trace = { path = "../../client/rpc/trace" }

# CLI-specific dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", optional = true, features = ["wasmtime"] }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", optional = true }
edgeware-cli-opt = { package = "edgeware-cli-opt", path = "../cli-opt", optional = true }

fc-consensus = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }
fp-consensus = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }
fc-rpc = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19", features = ["rpc_binary_search_estimate"] }
fp-rpc = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }
fc-rpc-core = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }
fc-db = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }
fc-mapping-sync = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.19" }

# WASM-specific dependencies
#wasm-bindgen = { version = "0.2.57", optional = true }
#wasm-bindgen-futures = { version = "0.4.7", optional = true }
#libp2p-wasm-ext = { version = "0.29", features = ["websocket"], optional = true }

tokio = "0.2"

[target.'cfg(target_arch="x86_64")'.dependencies]
edgeware-executor = { path = "../executor", features = [ "wasmtime" ] }

[dev-dependencies]
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

futures = "0.3.4"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "2.0.0"
clap = { version = "3.1.8", features = [ "derive" ] }

[build-dependencies]
clap = { version = "3.1.8", features = [ "derive" ], optional = true }

#structopt = { version = "0.3.8", features=["paw"] }
#paw = "1.0"
#structopt = { version = "0.3.8", features=["paw"] , optional = true } #{ version = "0.3.8", features=["paw"] }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", optional = true }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", optional = true }
substrate-frame-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", optional = true, features = ["wasmtime"] }
edgeware-cli-opt = { package = "edgeware-cli-opt", path = "../cli-opt", optional = true }

[features]
default = [ "cli" ]
cli = [
	"edgeware-executor/wasmi-errno",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"clap",
	"pallet-contracts/std",
#	"ethereum-types/std",
	"substrate-build-script-utils",
	"edgeware-cli-opt"
]
frontier-block-import = []
cli-completion = []
runtime-benchmarks = [
	"edgeware-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
fast-runtime = [
	"edgeware-runtime/fast-runtime",
]
