[package]
name = "edgeware-executor"
version = "4.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
trie-root = "0.16.0"
codec = { package = "parity-scale-codec", version = "3.1.2" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", features = ["wasmtime"] }
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19"  }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

edgeware-primitives = { version = "4.0.0", path = "../primitives" }
edgeware-runtime = { version = "4.0.0", path = "../runtime" }
edgeware-runtime-interface = { version = "4.0.0", path = "../runtime-interface" }

[dev-dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
wabt = "0.10.0"
criterion = "0.3.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
