[package]
name = "edgeware-inspect"
version = "3.1.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware runtime inspect utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master" }
sc-client-api = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master" }
sc-service = { version = "0.8.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "master" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master" }
sp-core = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master" }
sp-runtime = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "master" }
structopt = "0.3.8"
