[package]
name = "edgeware-primitives"
version = "3.3.6"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware runtime primitives"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-system = { version = "3.0", default-features = false }
sp-application-crypto = { version = "3.0", default-features = false }
sp-core = { version = "3.0", default-features = false }
sp-runtime = { version = "3.0", default-features = false }

[dev-dependencies]
sp-serializer = { version = "3.0" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]