[package]
name = "edgeware-primitives"
version = "3.4.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware runtime primitives"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
frame-system = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-application-crypto = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-core = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }
sp-runtime = { git = "https://github.com/webb-tools/substrate", branch = "erup-5", default-features = false }

[dev-dependencies]
sp-serializer = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]