[package]
name = "edgeware-rpc-client"
version = "3.2.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
futures = "0.1.29"
hyper = "0.12.35"
jsonrpc-core-client = { version = "15.0.0", default-features = false, features = ["http"] }
log = "0.4.8"
edgeware-primitives = { path = "../primitives" }
sp-tracing = { version = "2.0" }
sc-rpc = { version = "2.0" }