[package]
name = "edgeware-rpc-client"
version = "3.3.6"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgweare rpc client library"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.1.29"
hyper = "0.12.35"
jsonrpc-core-client = { version = "15.0.0", default-features = false, features = ["http"] }
log = "0.4.8"
edgeware-primitives = { path = "../primitives" }
sp-tracing = { version = "3.0" }
sc-rpc = { version = "3.0" }
