[package]
name = "edgeware-rpc"
version = "3.3.5"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware rpc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
pallet-contracts-rpc = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-transaction-payment-rpc = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-client-api = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-consensus-aura = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-consensus-epochs = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-finality-grandpa = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-finality-grandpa-rpc = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-keystore = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-network = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-rpc-api = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-rpc = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-service = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-api = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-block-builder = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-blockchain = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-consensus = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-consensus-aura = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-core = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-offchain = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-runtime = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-storage = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-session = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sp-transaction-pool = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
sc-transaction-pool = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
substrate-frame-rpc-system = { git = "https://github.com/webb-tools/substrate", branch = "erup-5" }
tokio = { version = "0.2.13", features = ["macros", "sync"] }

pallet-ethereum = { git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb", features = ["runtime-benchmarks"] }
fc-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fp-rpc = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fc-rpc-core = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fc-db = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }
fc-mapping-sync = { default-features = false, git = "https://github.com/webb-tools/frontier", branch = "erup-5-webb" }

edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
edgeware-executor = { path = "../executor" }
edgeware-cli-opt = { path = "../cli-opt" }
edgeware-rpc-txpool = { path = "../../client/rpc/txpool" }
edgeware-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
edgeware-rpc-debug = { path = "../../client/rpc/debug" }
edgeware-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
edgeware-rpc-trace = { path = "../../client/rpc/trace" }

[features]
std = []